media/styles/clearspending.css
/* ... */
.animationTitle { text-transform: uppercase; font-size: 80%; display: block; float: left; width: 160px; line-height: 13px; margin-top: 6px;}

.yellow:hover { background: url(../images/animation_arrowsYellow.png) left -36px no-repeat;}
.yellow a.active { background: url(../images/animation_arrowsYellow.png) left top no-repeat; }
.yellow a.active, .blue a.active  { color: #fff;}

.blue:hover { background: url(../images/animation_arrowsBlue.png) left -36px no-repeat;}
.blue a.active { background: url(../images/animation_arrowsBlue.png) left top no-repeat;}

.pullDown { background: url(../images/expandarrow.png) top left no-repeat; text-indent: -9999em; float: left; margin: 13px 10px 0; display: block; width: 6px; height: 8px;}
.blue a.active .pullDown, .yellow a.active .pullDown { background: url(../images/expandarrow.png) left -8px no-repeat; }

#firstNumber { margin-left: 21px;}

.scorecard #sidenav p { display: none; font-size: 90%; color: #8E8E8E; padding: 10px 0 20px 25px; line-height: 18px; width: 175px;}
ul#sidenav { margin-left: 0px; }
#view { display: block; margin-top: 35px; color: #68A31D; font-weight: bold; text-transform: uppercase; background: url(../images/btn_scorecardSm.png) top left no-repeat; text-indent: -9999em; width: 186px; height: 33px;}
#view:hover { color: #636466; }

#stage { float: left; margin-left: -14px; margin-top: 22px; }


/* cross browser table scroll styling */
div#agencytablecontainer, div#programtablecontainer { height: 500px; width: 890px; clear:both; overflow-y:auto; overflow-x:hidden; }
html>body div#agencytablecontainer, html>body div#programtablecontainer { overflow: hidden; width:100%; height: 550px; }
div#agencytablecontainer thead tr th, div#programtablecontainer thead tr th  {  background-color:white; }

div#agencytablecontainer table, div#programtablecontainer table { float:left; width: 874px; }
html>body div#agencytablecontainer table, html>body div#programtablecontainer table { width: 100%; }
div#agencytablecontainer thead tr, div#programtablecontainer thead tr { position:relative; }

html>body div#agencytablecontainer thead tr, html>body div#programtablecontainer thead tr { display:block; }

div#agencytablecontainer tbody, div#programtablecontainer tbody { height: 500px; width: 100%; overflow-x: hidden; overflow-y: auto; display:block;}
div#agencytablecontainer tr, div#programtablecontainer tr {  }


div#programtablecontainer .med, div#agencytablecontainer .med { width: 105px;}
div#programtablecontainer .lg, div#agencytablecontainer .lg { width: 150px;}
div#programtablecontainer .sm, div#agencytablecontainer .sm { width: 70px;}

div#agencytablecontainer, div#programtablecontainer { margin: 40px 0;}
#agencytable tr, #programtable tr, #agencytable tr td, #programtable tr td {height: auto;}

.agencydescription { color: #8E8E8E; font-size: 100%; line-height: 150%; padding-left: 10px; display: none; width: 280px; }

.caveat { -moz-border-radius: 5px; -webkit-border-radius: 5px; border: 2px solid #C30B0B; color: #636466; display:block; font-style:italic; margin-top: 20px; padding: 10px 30px; }


/* table styles */
span.float-right { display: inline; float:right; margin: 15px; font-weight: bold; }
span.float-left { display: inline; float:left; margin: 15px; font-weight: bold; }
span.float-right table, span.float-left table { margin-top: 10px; }
span.float-right table th, span.float-left table th { color: #636466; font-weight: bold; text-align:center; padding: 7px; }
span.float-right table td, span.float-left table td { border: 1px solid #636466; padding: 7px; }

/* popup for scorecard intro */
div#scorecard-intro {display: none; }
div#scorecard-intro { color: #636466; background-color: #fff; -moz-border-radius: 6px; -webkit-border-radius: 6px; border: 1px solid; padding: 25px; position: absolute; margin-left: 130px; width: 605px; z-index: 2;}
.buttonWrapper { float: left;}
div#scorecard-intro p { margin-bottom: 15px; clear:both; }
div#scorecard-intro span { width: 250px; float: left; display: block; font-weight: bold; margin-top: 25px;}
div#scorecard-intro img { float: left; }
div#scorecard-intro ul { clear: both; padding-top: 3px;}
#interiorList { margin-left: 25px;}
div#scorecard-intro ul li { margin: 5px; padding-top: 3px; list-style-type: none; margin-left: 0;}
div#scorecard-intro span.clear { margin: 0; float:none; }

ol#cite { font-size: x-small; font-style: italic; }
ol#cite li { margin-bottom: 2px;  }
.footnote { padding: 10px; margin: 10px; display: block; font-style:italic; }


#summary { margin: 0; padding: 0; vertical-align: top; }
#summary .section { clear: both; }
#summary .section h1 { font-weight: bold; font-size: 150%; margin: 1.5em 0 0.5em 0; }
#summary .col1a, #summary .col2a, #summary .col1b, #summary .col2b { margin: 0; padding: 0; }
#summary .col1a { width: 60%; float: left; padding-right: 2%; }
#summary .col2a { width: 36%; float: right; vertical-align: top; padding-left: 2%; }
#summary .col1b { width: 36%; float: left; padding-right: 2%; }
#summary .col2b { width: 60%; float: right; padding-left: 2%; }
#summary span.graph-title { display: inline-block; font-weight: bold; padding: 0; margin: 0; text-align: center; width: 100%; }
#summary ul.legend { margin-top: 30px; }
#summary ul.legend li span { width: 10px; height: 10px; display: block; float: left; margin-right: 5px; margin-top: 4px; }

#summary table.exhibit td { border: 1px #C4C2C1 solid; padding: 0.25em 0 0.25em 0; margin: 0; }
#summary table.exhibit th { border-bottom: 1px #C4C2C1 solid; font-weight: bold; vertical-align: bottom; padding: 0.25em; margin: 0; }
#summary table.exhibit tr.odd { background-color: transparent; }
table.exhibit th, td.year, td.pct, td.tally { text-align: center; }
#summary #completeness-total { float: left; width: 219px; height: 219px; position: relative; background-color: #EB4724; margin-right: 20px; margin-top: 20px; color: white; font-size: 125%; font-weight: bold; vertical-align: middle; }
/* ... */

